<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MiPrimeraApp</string>
    <string name="app_name2">MiSegundaApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="boton1">Volteame la palabra</string>
    <string name="boton2">Registrar</string>
    <string name="texto1">Texto a voltear</string>
    <string name="action_close">cerrar app</string>
    <string name="action_9gag">9gag</string>
    <string name="action_goog">Google</string>
    <string name="action_yout">Youtuve</string>
    <string name="Segunda_actividad">Segunda actividad</string>

</resources>
