<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.miprimeraapp.MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/EditTextEntrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto1" >

            <requestFocus />
            
            
            
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton1" />

        <TextView
            android:id="@+id/textViewSalida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        
        
        

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/gridLayout1"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/editTextPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_below="@+id/gridLayout1"
            android:ems="10"
            android:inputType="textPassword" />
        
        <EditText
            android:id="@+id/editTextFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/gridLayout1"
            android:layout_alignLeft="@+id/linearLayout1"
            android:layout_marginBottom="21dp"
            android:ems="10"
            android:inputType="text|date" />
        
        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton2" 
            android:onClick="mostrar"/>
        
    </LinearLayout>
</RelativeLayout>